# study

./: .gitignore
cpp/: CMakeLists.txt  LearnCpp11.org  eproject.cfg
cpp/boost/: CMakeLists.txt
cpp/boost/unit/: CMakeLists.txt  main.cpp
dotnet/: LearnDotNet.org  LearnDotNetBookZero.org  LearnProCSharp.org  (+3 more)
engineering/eigen/helloEigen/: CMakeLists.txt  main.cpp  main.working.cpp
opencv/: CMakeLists.txt  LearnOpenCv.org  eproject.cfg  imagedir.h.in
opencv/chapter1/cvmat_test/: CMakeLists.txt  main.cpp
opencv/chapter1/pixel/: CMakeLists.txt  main.cpp
opencv/chapter2/: CMakeLists.txt
opencv/chapter2/arithmetic1/: CMakeLists.txt
opencv/chapter2/bgremover/: CMakeLists.txt  main.cpp
opencv/chapter2/colorReduce/: CMakeLists.txt  colorReduce.cpp  colorReduce.h  main.cpp
opencv/chapter2/ippoptest/: CMakeLists.txt  main.cpp
opencv/chapter2/operatorTest/: CMakeLists.txt  main.cpp  operatorTest.cpp  operatorTest.h
opencv/chapter2/operatorTest2/: CMakeLists.txt  main.cpp
opencv/chapter2/sharpen/: CMakeLists.txt  main.cpp
opencv/chapter3/qtsample/: CMakeLists.txt  ColorDetector.cpp  ColorDetector.h  ColorIcon.h  MainWindow.cpp  MainWindow.h  Property.h  PropertyManager.cpp  PropertyManager.h  main.cpp  target-impl.cpp  types.h
opencv/cmake/: FindIpp.cmake  FindVld.cmake  UseIpp.cmake  UseOpenCv.cmake
opencv/common/: CMakeLists.txt  common.h  ipp-essential-for-wp.txt  ippi+.hpp  ippi.hpp  vldhelper.h  wconstimage_t.h  wimage.cpp  wimage.h  wimage.inl  wimage_operator.h  wimage_p.h  wimage_t.cpp  wimage_t.h  wimage_t_traits.h  wimage_util.h  wimagebuffer.cpp  wimagebuffer.h  wimagebuffer.inl  wimagebuffer_t.cpp  wimagebuffer_t.h  wimageipp.cpp  wimageipp.h  wimageprocessor.cpp  wimageprocessor.h  wimageprocessor_macros.h  wpixel.h  wstopwatch.h
opencv/common/qtpropertybrowser/: CMakeLists.txt
opencv/common/wimage/: CMakeLists.txt  ipp-essential-for-wp.txt  ippi.hpp  ippi.hpp.stripped.txt  vldhelper.h  wconstimage_t.h  wimage_filter.h  wimage_t.h  wimage_t_traits.h  wimagebuffer.cpp  wimagebuffer.h  wimagebuffer_t.cpp  wimagebuffer_t.h  wimageprocessor.cpp  wimageprocessor.h  wippkernel.h  wlookuptable.h  wpixel.h
opencv/python/: lpf_by_fft.py  lpf_by_fft_clean.py  lpf_by_fft_clean_ift.py  numpy-tutorial.py
opencv/src/: CMakeLists.txt
opencv/src/common/: CMakeLists.txt
opencv/src/common/algo/: AlgoPropertyManager.cpp  AlgoPropertyManager.h  AlgoPropertySystem.cpp  AlgoPropertySystem.h  AlgoTypes.h  Algorithm.cpp  Algorithm.h  CMakeLists.txt  ColorDetector.cpp  ColorDetector.h  Histogram.cpp  Histogram.h  ImageResizer.cpp  ImageResizer.h
opencv/src/examples/: CMakeLists.txt
opencv/src/examples/chapter1/: CMakeLists.txt
opencv/src/examples/chapter1/cvmat_test/: CMakeLists.txt  main.cpp
opencv/src/examples/chapter1/pixel/: CMakeLists.txt  main.cpp
opencv/src/examples/chapter2/bgremover/: CMakeLists.txt  main.cpp
opencv/src/examples/chapter2/colorReduce/: CMakeLists.txt  colorReduce.h  main.cpp
opencv/src/examples/chapter2/ippoptest/: CMakeLists.txt  main.cpp
opencv/src/examples/chapter2/operatorTest/: CMakeLists.txt  main.cpp  operatorTest.h
opencv/src/examples/chapter2/operatorTest2/: CMakeLists.txt  compare.cpp  main.cpp
opencv/src/examples/chapter2/sharpen/: CMakeLists.txt  main.cpp
opencv/src/examples/chapter3/: CMakeLists.txt
opencv/src/examples/chapter3/qtsample/: CMakeLists.txt  ColorIcon.cpp  MainWindow.cpp  MainWindow.h  WCrossSplitter.cpp  WCrossSplitter.h  WImageViewer.cpp  WImageViewer.h  WImageViewerPixelItem.cpp  WImageViewerPixelItem.h  WIntensityProfileWidget.cpp  WIntensityProfileWidget.h  main.cpp  target-impl.cpp
opencv/src/examples/chapter4/: CMakeLists.txt
opencv/src/examples/chapter4/histogram-1/: CMakeLists.txt  main.cpp
opencv/src/framework/: CMakeLists.txt
opencv/src/framework/image/: CMakeLists.txt  Vld.h  WConstImageT.h  WHistogram.cpp  WHistogram.h  WImageBuffer.cpp  WImageBuffer.h  WImageBuffer.inl  WImageBufferPrivate.h  WImageBufferT.cpp  WImageBufferT.h  WImageBufferT.inl  WImageGlobal.h  WImageProcessor.cpp  WImageProcessor.h  WImageProcessorMacros.h  WImageT.h  WImageUtils.h  WIppKernel.h  WLookupTable.h  WLookupTableTraits.h  WPixel.h  WTempBuffer.cpp  WTempBuffer.h  ippi_ext.hpp
opencv/src/framework/property/: CMakeLists.txt  DualSpinValueProperty.h  EditorImpl.h  PlainColorProperty.cpp  PlainColorProperty.h  PropertyBase.h  PropertyManager.cpp  PropertyManager.h  PropertySystem.cpp  PropertySystem.h  RangeValue.h  RangedProperty.h  SimpleProperty.h  SliderSpinValueProperty.cpp  SliderSpinValueProperty.h
qt/CharacterEncodeDetectorNsUniversal/: CMakeLists.txt  main.cpp  nsUniversalDetector.cpp
qt/DrawOnImage/: CMakeLists.txt  DrawOnImageWindow.cpp  DrawOnImageWindow.h  FindVld.cmake  UseVld.cmake  main.cpp  res.qrc
qt/GraphVizOnGraphicsView/: CMakeLists.txt  FindGraphViz.cmake  FindQt4.cmake  GVGraph.cpp  GVGraph.h  GraphViz.h  WGraphicsArrowItem.cpp  WGraphicsArrowItem.h  WGraphicsUtil.cpp  WGraphicsUtil.h  main.cpp
qt/QtMoreActiveX/: CMakeLists.txt  WDispatchDriver.cpp  WDispatchDriver.h  main.cpp
qt/QuaZipTest/QuaZip/: CMakeLists.txt  JlCompress.h  QuaZip.cmake  QuaZipConfig.cmake
qt/QuaZipTest/QuaZipTester/: CMakeLists.txt  WTempDir.cpp  WTempDir.h  WZipFileDelegate.cpp  WZipFileDelegate.h  main.cpp  so-sample.cpp
qt/ReadEvalPrintLoopWidget/: CMakeLists.txt  ReplWidget.cpp
qt/ScriptTest/: CMakeLists.txt  Defect.cpp  Defect.h  MainWindow.cpp  MainWindow.h  main.cpp
qt/UsingCustomTypeInSignalSlot/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  TestClass.h  main.cpp
vtk/: CMakeLists.txt  FindVTK.cmake  FindVld.cmake  vldcheck.h
vtk/cell_pick/: CMakeLists.txt  main.cpp
vtk/color_mapping/: CMakeLists.txt  main.cpp
vtk/cone_test/: CMakeLists.txt  GUI4.cpp
vtk/cursor/: CMakeLists.txt  main.cpp
vtk/display_quad/: CMakeLists.txt  main.cpp
vtk/hello_qvtk/: CMakeLists.txt  main.cpp
vtk/mouse_pick/: CMakeLists.txt  main.cpp
vtk/spm_tool/: CMakeLists.txt  MainWindow.h  MouseInteractorStyle.h  SpmData.cpp  SpmData.h  demosource.cpp  demosource.h  main.cpp
(+175 files in other folders)
