CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

ENABLE_TESTING()

# we only use these two configuration as much.
SET(CMAKE_CONFIGURATION_TYPES "Debug;RelWithDebInfo" CACHE STRING "limited configs" FORCE)
# project-wide shared cmake scripts.
SET(PROJECT_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH};${PROJECT_CMAKE_DIR})

PROJECT(CppStudy)

# Set up the environment
FIND_PACKAGE(Qt4 REQUIRED)
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost REQUIRED)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS "ON")

IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF()
INCLUDE_DIRECTORIES(${VLD_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/framework)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/external)

# # configure header to assign sample data file path.
# SET(IMAGE_DIR ${CMAKE_SOURCE_DIR}/image)
# CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imagedir.h.in
#   ${CMAKE_CURRENT_BINARY_DIR}/imagedir.h @ONLY)

ADD_SUBDIRECTORY(boost)
