CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

ENABLE_TESTING()

# we only use these two configuration as much.
SET(CMAKE_CONFIGURATION_TYPES "Debug;RelWithDebInfo" CACHE STRING "limited configs" FORCE)
# project-wide shared cmake scripts.
SET(PROJECT_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH};${PROJECT_CMAKE_DIR})

PROJECT(OpenCvStudy)

# Set up the environment
FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(Vld REQUIRED)
FIND_PACKAGE(Ipp REQUIRED)

INCLUDE(${PROJECT_CMAKE_DIR}/UseOpenCv.cmake)
INCLUDE(${PROJECT_CMAKE_DIR}/UseIpp.cmake)

INCLUDE_DIRECTORIES(${VLD_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common/wimage)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})

# configure header to assign sample data file path.
SET(IMAGE_DIR ${CMAKE_SOURCE_DIR}/image)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imagedir.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/imagedir.h @ONLY)

SET(PROJECT_COMMON_LIBRARIES
  ${VLD_LIBRARIES}
  ${OPENCV_LIBRARIES}
  ${IPP_LIBRARIES}
  )

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(chapter1)
ADD_SUBDIRECTORY(chapter2)
ADD_SUBDIRECTORY(chapter3)
