CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

ENABLE_TESTING()

# we only use these two configuration as much.
SET(CMAKE_CONFIGURATION_TYPES "Debug;RelWithDebInfo" CACHE STRING "limited configs" FORCE)
# project-wide shared cmake scripts.
SET(PROJECT_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH};${PROJECT_CMAKE_DIR})

PROJECT(OpenCvStudy)

# Set up the environment
FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(Vld REQUIRED)
FIND_PACKAGE(Ipp REQUIRED)

INCLUDE(${PROJECT_CMAKE_DIR}/UseOpenCv.cmake)
INCLUDE(${PROJECT_CMAKE_DIR}/UseIpp.cmake)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS "ON")

INCLUDE_DIRECTORIES(${VLD_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/framework)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/external)

# configure header to assign sample data file path.
SET(IMAGE_DIR ${CMAKE_SOURCE_DIR}/image)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imagedir.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/imagedir.h @ONLY)

ADD_SUBDIRECTORY(src)
